[package]
name = "postman-naive"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.33"

# For image support:
egui_extras = { version = "0.33", features = ["default", "image"] }

env_logger = { version = "0.10", features = ["auto-color", "humantime"] }
reqwest = { version = "0.13.2", features = ["blocking"] }
